fix(Board): padding issue on mobile

--- a/src/routes/Board/styles.less
+++ b/src/routes/Board/styles.less
@@ -187,8 +187,10 @@
     .board-container {
         .board-content-container {
             .board-content {
+                padding: 1em 0;
+
                 .board-row {
-                    margin: 2em 1em;
+                    padding: 1em;
                 }
 
                 .board-row-poster, .board-row-square {
